--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,6 @@
     </style>
 </head>
 <body>
-    <img src="{% static 'img/test.jpg' %}" alt="test">
+    <img src="{% static 'img/test.JPG' %}" alt="test">
 </body>
 </html>
